更改名字用来区分

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* 
-Theme Name: NexT WP 
+Theme Name: My NexT WP
 Theme URI: https://github.com/pengtikui/NexT 
 Author: Paranoid_K 
 Author URI: http://pengtikui.cn/ 
